# rafctl

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  pre-prd.md
.github/workflows/: ci.yml  release.yml
_bmad-output/: project-context.md
_bmad-output/planning-artifacts/: architecture.md  backlog-improvements.md  epics-v03-analytics.md  epics.md  prd.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml  codex.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
docs/: README.md  claude-hud-analysis.md  claude-hud-deep-analysis.md  dashboard.md  hud.md  quota-monitoring.md  sessions.md
src/: error.rs  lib.rs  main.rs
src/cli/: analytics.rs  auth.rs  config.rs  dashboard.rs  debug.rs  env.rs  hud.rs  mod.rs  output.rs  profile.rs  quota.rs  run.rs  sessions.rs  status.rs  watch.rs
src/core/: config.rs  constants.rs  credentials.rs  mod.rs  profile.rs  stats.rs  transcript.rs
src/hud/: mod.rs  renderer.rs  stdin.rs
src/tools/: claude.rs  codex.rs  keychain.rs  mod.rs
tests/: integration.rs
